@@ -1,6 +1,6 @@
 package apps;
 
-import java.util.Arrays;
+//import java.util.Arrays;
 import java.util.List;
 
 import tables.HashTable;
@@ -12,20 +12,24 @@ public class Sandbox {
 		 * or demonstrate arbitrary code.
 		 */
 
-		HashTable test1 = new HashTable("Sports List", List.of("Sport", "Players per team", "Game Length"));
-		test1.put("Lacrosse", List.of("10", "60 minutes"));
-		test1.put("Hockey", List.of("6", "60 minutes"));
-		test1.put("Basketball", List.of("5", "45 to 60 minutes"));
-		test1.put("Soccer", List.of("10", "90 minutes"));
-		test1.put("Football", Arrays.asList("10", "60 minutes"));
-		test1.put("Baseball", Arrays.asList("10", null));
-		test1.put("Softball", Arrays.asList("10", null));
-		test1.put("Swimming", List.of("1", "Varies"));
-		
-		
-		System.out.print(test1 +"\n");
-		
-		System.out.print(test1.filter("Game Length", "60 minutes"));
+		 HashTable test1 = new HashTable("Jaxon Transcript", List.of("Class Name", "Credit Hours", "Semester", "Grade"));
+		 test1.put("CS210", List.of("4", "Spring 2024", "A"));
+		 test1.put("CS350", List.of("3", "Spring 2024", "A"));
+		 test1.put("CPE310", List.of("3", "Spring 2024", "A"));
+		 test1.put("CPE10L", List.of("1", "Spring 2024", "A"));
+		 test1.put("MATH441", List.of("3", "Spring 2024", "A"));
+		 test1.put("MATH261", List.of("4", "Fall 2023", "B"));
+		 test1.put("CS111", List.of("3", "Fall 2023", "A"));
+		 test1.put("CS111L", List.of("1", "Fall 2023", "A"));
+		 test1.put("EE223", List.of("3", "Fall 2023", "B"));
+		 test1.put("EE223L", List.of("1", "Fall 2023", "A"));
+		 test1.put("CPE271", List.of("3", "Fall 2023", "B"));
+		 test1.put("CPE271L", List.of("1", "Fall 2023", "B"));
+		 
+		 
+		 System.out.print(test1 +"\n");
+		 
+		 System.out.print(test1.filter("Grade", "B"));
 		
 	}
 }
